[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-rf"
version = "0.1.0"
description = "A Truly Spatial Random Forests implementation for geoscience data analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "scikit-learn>=1.0.1",
    "joblib>=1.2",
]

[project.optional-dependencies]
dask = ["dask[complete]>=2022.1"]
ray = ["ray>=2.0"]
all = ["dask[complete]>=2022.1", "ray>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
